tests/ifcc-test-output/testfiles-05_04_constant_reject_affection/gcc-compile.txt
input.c: In function ‘main’:
input.c:3:7: error: lvalue required as left operand of assignment
    3 |     1 = 1;
      |       ^

exit status: 1
